tests/error/misc_errors/return_flag_callable.err
Error: Invalid annotation (at $FILE:7:25)
  | 
5 | 
6 | @guppy.declare
7 | def foo(f: "Function[[], qubit @owned]") -> None: ...
  |                          ^^^^^^^^^^^^ `@` type annotations are not allowed in this position

Guppy compilation failed due to 1 previous error
